--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 
 # Xcode
 #
-build/
+#build/
 *.pbxuser
 !default.pbxuser
 *.mode1v3
@@ -22,7 +22,6 @@ DerivedData
 
 # Android/IntelliJ
 #
-build/
 .idea
 .gradle
 local.properties
